--- a/styles/style.css
+++ b/styles/style.css
@@ -7,13 +7,16 @@
 }
 
 .jumbotron {
+  height: 100vh;
   padding-top: 6rem;
   padding-bottom: 1rem;
   transition: all 1s ease-in;
-  background: linear-gradient(181deg, #000000, #565555, #8c8c8c, #c8c8c8);
-  background-size: 800% 800%;
-  -webkit-animation: AnimationName 5s ease infinite;
-  animation: AnimationName 5s ease infinite;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background: #d5d5d5;
+  background: linear-gradient(0deg, #d5d5d5 0%, black 85%);
 }
 .jumbotron .container img {
   height: 100px;
@@ -54,6 +57,11 @@
   width: 30px;
 }
 
+.container .card {
+  -webkit-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.05);
+}
 .container .card .image-overlay {
   position: absolute;
   width: 100%;
@@ -75,9 +83,8 @@
 .container .card .image-overlay:hover {
   opacity: 1;
 }
-
-.myportfolio-sm .container .carousel ol li {
-  background-color: black !important;
+.container .card .row .accordion-collapse {
+  border: 0;
 }
 
 .card {
@@ -102,82 +109,6 @@ footer ul li .btn {
   font-size: 10px;
 }
 
-.content {
-  position: relative;
-  width: 90%;
-  max-width: 400px;
-  margin: auto;
-  overflow: hidden;
-}
-
-.content .content-overlay {
-  background: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  height: 99%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out 0s;
-  -moz-transition: all 0.4s ease-in-out 0s;
-  transition: all 0.4s ease-in-out 0s;
-}
-
-.content:hover .content-overlay {
-  opacity: 1;
-}
-
-.content-image {
-  width: 100%;
-}
-
-.content img {
-  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-}
-
-.content-details {
-  position: absolute;
-  text-align: center;
-  padding-left: 1em;
-  padding-right: 1em;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  opacity: 0;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.content:hover .content-details {
-  top: 50%;
-  left: 50%;
-  opacity: 1;
-}
-
-.content-details h3 {
-  color: #fff;
-  font-weight: 500;
-  letter-spacing: 0.15em;
-  margin-bottom: 0.5em;
-  text-transform: uppercase;
-}
-
-.content-details p {
-  color: #fff;
-  font-size: 0.8em;
-}
-
-.fadeIn-bottom {
-  top: 80%;
-}
-
 .roll-in-blurred-left {
   -webkit-animation: roll-in-blurred-left 0.8s 0.1s cubic-bezier(0.47, 0, 0.745, 0.715) both;
   animation: roll-in-blurred-left 0.8s 0.1s cubic-bezier(0.47, 0, 0.745, 0.715) both;
@@ -198,35 +129,6 @@ footer ul li .btn {
     transform: translateX(0) rotate(0deg);
     filter: blur(0);
     opacity: 1;
-  }
-}
-.vibrate-1 {
-  animation: vibrate-1 0.3s linear infinite both;
-}
-
-/**
- * ----------------------------------------
- * animation vibrate-1
- * ----------------------------------------
- */
-@keyframes vibrate-1 {
-  0% {
-    transform: translate(0);
-  }
-  20% {
-    transform: translate(-2px, 2px);
-  }
-  40% {
-    transform: translate(-2px, -2px);
-  }
-  60% {
-    transform: translate(2px, 2px);
-  }
-  80% {
-    transform: translate(2px, -2px);
-  }
-  100% {
-    transform: translate(0);
   }
 }
 .slide-in-blurred-top {
@@ -280,6 +182,9 @@ footer ul li .btn {
   }
 }
 @media (min-width: 768px) {
+  .jumbotron {
+    height: auto;
+  }
   .jumbotron .container p {
     font-weight: 200;
     font-size: 1.5em;
@@ -294,6 +199,13 @@ footer ul li .btn {
   .jumbotron .container img {
     height: 200px;
     width: 200px;
+  }
+
+  .project {
+    max-width: 370px;
+  }
+  .project img {
+    max-height: 250px;
   }
 }
 
