--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,62 @@
   margin-top: 1em;
 }
 
+.canvasing {
+  background-color: #dff6ff;
+  height: 100%;
+}
+.canvasing .timeline {
+  height: -webkit-fill-available;
+}
+.canvasing .timeline hr {
+  align-items: stretch;
+  width: 2px;
+  height: -webkit-fill-available;
+  position: absolute;
+  left: 31px;
+  z-index: 1;
+}
+
+.resume {
+  height: 100%;
+}
+.resume hr {
+  width: 2px;
+  height: -webkit-fill-available;
+  position: absolute;
+  left: 31px;
+  z-index: 1;
+}
+.resume .work-titles {
+  align-self: center;
+}
+.resume .work-heading {
+  display: flex;
+}
+.resume .work-heading .work-icon {
+  grid-area: icon;
+  height: 40px;
+  width: 40px;
+  background-color: lightgrey;
+  border-radius: 50%;
+  z-index: 2;
+  margin-right: 1em;
+}
+.resume .work-heading .work-icon img {
+  position: relative;
+  height: 25px;
+  width: 25px;
+  top: 6px;
+  left: 8px;
+}
+.resume .work-heading .work-titles {
+  min-width: 240px;
+}
+.resume .work-lists {
+  margin-top: 0.5em;
+  margin-left: 2.5em;
+}
+
 .container .card {
   -webkit-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.05);
