--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,7 @@
-// body{
-//     height: 100%;
-//     min-height: 100%;
-// }
+html,
+body{
+    height: 100%;
+}
 
 // Navbar section
 .navbar {
@@ -120,13 +120,11 @@
 // resume section
 .canvasing{
     background-color: rgb(223, 246, 255);
-    height: 100%;
     .timeline{
-        height: -webkit-fill-available;
         hr{
             align-items: stretch;
             width: 2px;
-            height: -webkit-fill-available;
+            height: 100%;
             position: absolute;
             left: 31px;
             z-index: 1;
@@ -135,13 +133,13 @@
 }
 .resume{
     height: 100%;
-    hr{
-            width: 2px;
-            height: -webkit-fill-available;
-            position: absolute;
-            left: 31px;
-            z-index: 1;
-    }
+    // hr{
+    //         width: 2px;
+    //         height: 100%;
+    //         position: absolute;
+    //         left: 31px;
+    //         z-index: 1;
+    // }
 
     .work-titles{
         align-self: center;
