--- a/styles.scss
+++ b/styles.scss
@@ -78,6 +78,19 @@ body{
         width: 30px;
     }
 }
+.card{
+    .card-body{
+        .goal-icons{
+            text-align: center;
+            img{
+            height: 40px;
+            width: 40px;
+            margin-left: 1em;
+            margin-right: 1em;
+            }
+        }
+    }
+}
 
 //career & Eductation sections
 .career{
@@ -119,7 +132,7 @@ body{
 
 // resume section
 .canvasing{
-    background-color: rgb(223, 246, 255);
+    position: relative;
     .timeline{
         hr{
             align-items: stretch;
@@ -128,30 +141,18 @@ body{
             position: absolute;
             left: 31px;
             z-index: 1;
+            margin-top: 0;
         }
     }
 }
-.resume{
-    height: 100%;
-    // hr{
-    //         width: 2px;
-    //         height: 100%;
-    //         position: absolute;
-    //         left: 31px;
-    //         z-index: 1;
-    // }
 
-    .work-titles{
-        align-self: center;
-    }
-        // margin-left: 3em;
+// work history section
+.resume{
         .work-heading{
             display: flex;
-            // justify-content: space-between;
                 .work-icon{
-                    grid-area: icon;
                     height: 40px;
-                    width: 40px;
+                    min-width: 40px;
                     background-color: lightgrey;
                     border-radius:50%;
                     z-index: 2;
@@ -165,15 +166,67 @@ body{
                         }
                 }
                 .work-titles{
-                    min-width: 240px;
+                    // min-width: 240px;
+                    border-bottom: 5px solid rgb(180, 193, 200);
+                    h5{
+                        font-weight: 300;
+                    }
+                    h6{
+                        font-size: 12px;
+                        color: grey;
+                    }
+                    img{
+                        height: 40px;
+                        width: 40px;
+                    }
                 }
         }
         .work-lists{
             margin-top: .5em;
             margin-left: 2.5em;
+            font-weight: 300;
         }
 }
 
+
+//education section
+.education{
+        .education-heading{
+            display: flex;
+                .education-icon{
+                    height: 40px;
+                    min-width: 40px;
+                    background-color: lightgrey;
+                    border-radius:50%;
+                    z-index: 2;
+                        img{
+                            position: relative;
+                            height:25px;
+                            width:25px;
+                            top: 6px;
+                            left: 8px;
+                        }
+                }
+                .education-titles{
+                    margin: 0 auto;
+                    min-width: 240px;
+                    margin-bottom: 2em;
+                    text-align: center;
+                    img{
+                        height: 40px;
+                        width: 40px;
+                    }
+                    h5{
+                        font-weight: 300;
+                    }
+                    h6{
+                        font-size: 12px;
+                        color: grey;
+                    }
+                }
+                
+        }
+}
 
 // portfolio section
 .container{
@@ -447,6 +500,56 @@ footer{
         }
     }
 
+    .resume{
+            .work-heading{
+                    .work-icon{
+                        margin-right: 1em;
+                            img{
+                                position: relative;
+                                height:25px;
+                                width:25px;
+                                top: 6px;
+                                left: 8px;
+                            }
+                    }
+                    .work-titles{
+
+                    }
+                    
+            }
+            .work-lists{
+
+            }
+    }
+
+    .canvasing{
+        position: relative;
+        .timeline{
+            hr.education-line{
+                align-items: stretch;
+                width: 2px;
+                height: 100%;
+                position: absolute;
+                z-index: 1;
+                margin-top: 0;
+            }
+        }
+    }
+
+    .education{
+        .education-heading{
+            .education-icon{
+                margin-right: 1em;
+            }
+            .education-titles{
+                width: -webkit-fill-available;
+                text-align: left;
+                    img{
+                        float: right;
+                    }
+            }
+        }
+    }
 
 }
 
@@ -471,21 +574,11 @@ footer{
         } 
     }
 
-// .container{
-//     .card{
-//         .image-overlay{
-//             img{
-//                 height:30px;
-//                 width:30px;
-//             }
-//         }
-//     }
-// }
-
     .project{
         max-width: 370px;
         img{
         max-height: 250px;
         }
     }
+
 }
